Pievienoju js kodu

--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
                       
                       <button id="jaunsProdukts">Jauns produkts</button>
 
-                      <div id="point">
+                                        <div id="point">
                                             <form id="form">
-                                                <input type="text" id="produkt" placeholder="Protukts">
+                                                <input type="text" id="produkts" placeholder="Protukts">
                                                 <input type="text" id="daudzums" placeholder="Daudzums">
                                                 <button type="submit" id="pievienotProduktu">Pievienot</button>
                                             </form>
                                         </div>
                                     
-                                        <div id="Izvele">
-                                        </div>
+                                        <div id="Izvele"></div>
 
 
 <script src="scripts.js"></script>              
