--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 
                                         <div id="point">
                                             <form id="form">
-                                                <input type="text" id="produkts" placeholder="Protukts">
+                                                <input type="text" id="produkts" placeholder="Produkts">
                                                 <input type="text" id="daudzums" placeholder="Daudzums">
                                                 <button type="submit" id="pievienotProduktu">Pievienot</button>
                                             </form>
                                         </div>
                                     
-                                        <div id="Izvele"></div>
+                                        <div id="Izvele">
+                                        </div>
 
 
 <script src="scripts.js"></script>              
